--- a/cuenta.html
+++ b/cuenta.html
@@ -12,7 +12,7 @@
         <div class="encabezado_izquierda">
             <img src="images/spotify_icon.png" alt="icon" class="imagen3">
             <div class="titulo">
-                <h1 ><a href="entrega1.html" >UC3Musica</a></h1>
+                <h1 ><a href="entrega3.html" >UC3Musica</a></h1>
             </div>
         </div>
         <div class="cuerpo_izquierda">
@@ -92,16 +92,13 @@
                     <input type="text" id="usuariovariable" value="" placeholder="" name="usuario" required>
                     <br>
                     <label for="psw"><b>Contraseña</b></label>
-                    <a id="contraseñainvariable" class="contraseñainvariable">contraseña</a>
+                    <input type="password" id="contraseñavariable" value="" placeholder="" name="usuario" required>
                     <br>
                     <label for="nombreapellidos"><b>Nombre y Apellidos</b></label>
-                    <a id="nombreapellidosinvariable" class="nombreapellidosinvariable">nombreapellidos</a>
-                    <br>
-                    <label for="email"><b>Email</b></label>
-                    <a id="emailinvariable" class="emailinvariable">email</a>
+                    <input type="text" id="nombrevariable" value="" placeholder="" name="usuario" required>
                     <br>
                     <label for="fechadenacimiento"><b>Fecha de nacimiento</b></label>
-                    <a id="fechadenacimientoinvariable" class="fechadenacimientoinvariable">fecha de nacimiento</a>
+                    <input type="date" id="fechavariable" value="" placeholder="" name="usuario" required>
                     <br>
                     <label for="fotodeperfil"><b>Foto de perfil</b></label>
                     <input type="file" placeholder="Introduzca una foto de perfil (opcional)" name="fotodeperfil" id="fotodeperfilcambiada">
