--- a/entrega3.html
+++ b/entrega3.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="javascript/javascript.js"></script>
 </head>
-<body>
+<body onload="fotoperfil()">
     <div class="columna_izquierda">
         <div class="encabezado_izquierda">
             <img src="images/spotify_icon.png" alt="icon" class="imagen3">
@@ -68,7 +68,7 @@
     </div>
     <div class="columna_derecha">
 
-        <div class="encabezado_derecha">
+        <div class="encabezado_derecha"  >
             <img src="a.jpg" class="fotoperfil" id="fotoperfil">
             <button class="boton-opciones" onclick="abrirListaOpciones()" id="boton-opciones">Opciones</button>
             <div class="opciones-popup" id="opciones">
