--- a/entrega3.html
+++ b/entrega3.html
@@ -11,43 +11,28 @@
         <div class="encabezado_izquierda">
             <img src="images/spotify_icon.png" alt="icon" class="imagen3">
             <div class="titulo">
-                <h1 ><a href="entrega2.html" >UC3Musica</a></h1>
+                <h1 ><a href="entrega3.html" >UC3Musica</a></h1>
             </div>
         </div>
         <div class="cuerpo_izquierda">
             <div class="menu">
-                <div class="menu_option">
+                <div class="menu_option" onclick="abrirListasGuardadas()">
                     <div class="icono">
                         <img src="images/natos.jpg" alt="cantante1" class="imagen2">
                     </div>
                     <div class="texto_menu">
-                        <p class="texto">Hijos de la ruina. Natos y waor</p>
+                        <p class="texto">Listas guardadas</p>
                     </div>
                 </div>
-                <div class="menu_option">
+                <div class="menu_option" onclick="crearListas()">
                     <div class="icono">
                         <img src="images/sech2.jpg" alt="cantante1" class="imagen2">
                     </div>
                     <div class="texto_menu">
-                        <p class="texto">Sueños. Sech</p>
+                        <p class="texto">Crear lista</p>
                     </div>
                 </div>
-                <div class="menu_option">
-                    <div class="icono">
-                        <img src="images/costa.jpg" alt="cantante1" class="imagen2">
-                    </div>
-                    <div class="texto_menu">
-                        <p class="texto">Lento. Fernando Costa</p>
-                    </div>
-                </div>
-                <div class="menu_option">
-                    <div class="icono">
-                        <img src="images/3am.jpg" alt="cantante1" class="imagen2">
-                    </div>
-                    <div class="texto_menu">
-                        <p class="texto">Eminem. 3AM</p>
-                    </div>
-                </div>
+                
 
             </div>
             <div class="links">
