--- a/perfil_artista.html
+++ b/perfil_artista.html
@@ -74,9 +74,9 @@
             <div class="opciones-popup" id="opciones">
                 <form action="#" class="opciones-contenedor">
                   <h1 class="opciones-titulo">Opciones</h1>
-                  <button class="mi-perfil" onclick="location.href='perfil.html'">Mi Perfil</button>
-                  <button class="boton-mis-experiencias" onclick="location.href='cuenta.html'">Mi Cuenta</button>
-                  <button class="cerrar-sesión" onclick="location.href='entrega2.html'">Cerrar Sesión</button>
+                  <button class="mi-perfil" onclick="document.location.href='perfil.html'">Mi Perfil</button>
+                  <button class="boton-mis-experiencias" onclick="document.location.href='cuenta.html'">Mi Cuenta</button>
+                  <button class="cerrar-sesión" onclick="document.location.href='entrega2.html'">Cerrar Sesión</button>
                 </form>
               </div>
         </div>
