--- a/login.html
+++ b/login.html
@@ -76,6 +76,8 @@
         </div>
         <div class="cuerpo_derecha">
             <div class="modal" id="id02">
+                <img src="images/google-icon.png" class="iconos">
+                <img src="images/facebook-icon.png" class="iconos">
                 <form class="modal-content" method="post" action="#" onsubmit="return validarDatos(this)">
                   <div class="container">
                     <label for="email">Correo Electrónico</label>
