--- a/lista_canciones.html
+++ b/lista_canciones.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="javascript/javascript.js"></script>
 </head>
-<body>
+<body >
     <div class="columna_izquierda">
         <div class="encabezado_izquierda">
             <img src="images/spotify_icon.png" alt="icon" class="imagen3">
@@ -53,7 +53,7 @@
     </div>
     <div class="columna_derecha">
 
-        <div class="encabezado_derecha">
+        <div class="encabezado_derecha" >
             <img src="a.jpg" class="fotoperfil" id="fotoperfil">
             <button class="boton-opciones" onclick="abrirListaOpciones()" id="boton-opciones">Opciones</button>
             <div class="opciones-popup" id="opciones">
@@ -66,7 +66,7 @@
               </div>
         </div>
         <div class="cuerpo_derecha">
-              
+              <p>"hola"</p>
         </div>
     </div>
     <div class="pie">
