--- a/crearListas.html
+++ b/crearListas.html
@@ -76,7 +76,7 @@
                     <input type="text" placeholder="Nombre de la lista" name="usuario" required>
                     <br>
                     <label for="cancion"><b>Canciones</b></label>
-                    <input type="text" multiple placeholder="Canciones" name="canciones" id="busqueda" onkeyup="buscadorCanciones()" required>
+                    <input type="text" multiple placeholder="Canciones" name="canciones" id="busqueda"  required>
                     <br>
             
                     <div class="clearfix">
