--- a/perfil_artista.html
+++ b/perfil_artista.html
@@ -82,10 +82,8 @@
         </div>
         <div class="cuerpo_derecha">
             <h1 class="tipo_musica" id="titulo"></h1>
-            <div class="reggaeton">
-                <div class="imagen">
-                    <img src="images/sech.jpg" id="imagen">
-                </div>
+            <div class="reggaeton" id="canciones_cantante">
+
         </div>
     </div>
     <div class="pie">
