--- a/canciones.html
+++ b/canciones.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <script src="javascript/javascript.js"></script>
 </head>
-<body onload="verlistascreadas()">
+<body onload="vercancionescreadas()">
     <div class="columna_izquierda">
         <div class="encabezado_izquierda">
             <img src="images/spotify_icon.png" alt="icon" class="imagen3">
@@ -66,7 +66,10 @@
               </div>
         </div>
         <div class="cuerpo_derecha">
-              <ul id="dayslist" > </ul>
+            <h1 id="nombre_lista"></h1>
+            <div id="canciones" class="reggaeton">
+
+            </div>
         </div>
     </div>
     <div class="pie">
