--- a/entrega3.html
+++ b/entrega3.html
@@ -68,12 +68,12 @@
             </div>
 
             <div class="buscador">
-                <form class="modal-content" method="post" action="#" onsubmit="return reproducircancion(this)">
+                <form class="modal-content" method="post" action="cancion.html" onsubmit="reproducircancion(this)">
                   <div class="container">
                     <label for="cancion"></label>
-                    <input type="password" placeholder="Introduzca contraseña" name="canciones" required>
+                    <input type="text"  placeholder="Busca la cancion" name="canciones" required>
                     <br>
-                    <button type="submit" class="btnsubmit">Buscar</button>
+                    <button type="submit"  class="btnsubmit">Buscar</button>
                   </div>
                 </form>
             </div>
