--- a/lista_canciones.html
+++ b/lista_canciones.html
@@ -65,10 +65,10 @@
                 </form>
               </div>
         </div>
-        <div class="cuerpo_derecha">
-              <ul id="dayslist" > </ul>
+        <div class="cuerpo_derecha" id="cuerpo_derecha">
+            <h1 class="tipo_musica">PlayList</h1>
         </div>
-    </div>
+    </div> 
     <div class="pie">
         <p class="texto_pie">Usa la web que viene bien</p>
     </div>
