--- a/entrega3.html
+++ b/entrega3.html
@@ -71,9 +71,8 @@
                 <form class="modal-content" method="post" action="cancion.html" onsubmit="reproducircancion(this)">
                   <div class="container">
                     <label for="cancion"></label>
-                    <input type="text"  placeholder="Busca la cancion" name="canciones" required>
-                    <br>
-                    <button type="submit"  class="btnsubmit">Buscar</button>
+                    <input type="text"  class="buscador_entrada" placeholder="Busca la cancion" name="canciones" required>
+                    <button type="submit"  class="btnsubmit2">Buscar</button>
                   </div>
                 </form>
             </div>
@@ -85,44 +84,36 @@
             <h1 class="tipo_musica">Reggaeton</h1>
             <div class="reggaeton">
                  <div class="imagen">
-                    <div onmouseover="this.className='badbunny2';" onmouseout="this.className='badbunny';" onclick="reproductor();" class="badbunny">
+                    <div onmouseover="this.className='badbunny2';" onmouseout="this.className='badbunny';" onclick="reproductor('musica/badbunny.mp3');" class="badbunny">
 
                     </div>
 
                      <p class="texto">Benito Antonio Martínez Ocasio (Almirante Sur, Vega Baja, 10 de marzo de 1994), conocido artísticamente como Bad Bunny</p>
                  </div>
                  <div class="imagen">
-                    <div onmouseover="this.className='balvin2';" onmouseout="this.className='balvin';" class="balvin">
-                        <audio controls autoplay onmouseover="this.className='reproductor2';" onmouseout="this.className='reproductor';" class="reproductor">
-                            <source src="musica/balvin.mp3" >
-                        </audio>
+                    <div onmouseover="this.className='balvin2';" onmouseout="this.className='balvin';" onclick="reproductor('musica/balvin.mp3');" class="balvin">
+
                     </div>
 
                      <p class="texto">José Álvaro Osorio Balvín (Medellín, 7 de mayo de 1985),2​ conocido artísticamente como J Balvin, es un rapero, cantante colombiano</p>
                  </div>
                  <div class="imagen">
-                    <div onmouseover="this.className='ozuna2';" onmouseout="this.className='ozuna';" class="ozuna">
-                        <audio controls autoplay onmouseover="this.className='reproductor2';" onmouseout="this.className='reproductor';" class="reproductor">
-                            <source src="musica/ozuna.mp3" >
-                        </audio>
+                    <div onmouseover="this.className='ozuna2';" onmouseout="this.className='ozuna';" onclick="reproductor('musica/ozuna.mp3');" class="ozuna">
+
                     </div>
 
                      <p class="texto">Juan Carlos Ozuna Rosado (San Juan, 13 de marzo de 1992), conocido simplemente como Ozuna, es un cantante y actor puertorriqueño</p>
                  </div>
                  <div class="imagen">
-                    <div onmouseover="this.className='sech2';" onmouseout="this.className='sech';" class="sech">
-                        <audio controls autoplay onmouseover="this.className='reproductor2';" onmouseout="this.className='reproductor';" class="reproductor">
-                            <source src="musica/sech.mp3" >
-                        </audio>
+                    <div onmouseover="this.className='sech2';" onmouseout="this.className='sech';" onclick="reproductor('musica/sech.mp3');" class="sech">
+
                     </div>
 
                      <p class="texto">Carlos Isaías Morales Williams (Río Abajo, 3 de diciembre de 1993),2​ conocido por Sech, es un cantautor y productor musical panameño de reguetón</p>
                  </div>
                  <div class="imagen">
-                    <div onmouseover="this.className='nickyjam2';" onmouseout="this.className='nickyjam';" class="nickyjam">
-                        <audio controls autoplay onmouseover="this.className='reproductor2';" onmouseout="this.className='reproductor';" class="reproductor">
-                            <source src="musica/nickyjam.mp3" >
-                        </audio>
+                    <div onmouseover="this.className='nickyjam2';" onmouseout="this.className='nickyjam';" onclick="reproductor('musica/nickyjam.mp3');" class="nickyjam">
+
                     </div>
 
                      <p class="texto">Nick Rivera Caminero (Lawrence, Massachusetts; 17 de marzo de 1981), conocido por su nombre artístico Nicky Jam, es un cantante estadounidense de reguetón y trap​</p>
@@ -134,46 +125,36 @@
             <h1 class="tipo_musica">Trap</h1>
             <div class="reggaeton">
                 <div class="imagen">
-                   <div class="tiago">
-                       <audio controls autoplay onmouseover="this.className='reproductor2';" onmouseout="this.className='reproductor';" class="reproductor">
-                           <source src="musica/tiago.mp3" >
-                       </audio>
+                   <div onmouseover="this.className='tiago2';" onmouseout="this.className='tiago';" onclick="reproductor('musica/tiago.mp3');" class="tiago">
+
                    </div>
 
                     <p class="texto">Tiago Uriel Pacheco, mejor conocido por  Tiago PZK nació el 3 de agosto de 2001, en Monte Grande, Buenos Aires, Argentina</p>
                 </div>
                 <div class="imagen">
-                   <div onmouseover="this.className='nicole2';" onmouseout="this.className='nicole';" class="nicole">
-                       <audio controls autoplay onmouseover="this.className='reproductor2';" onmouseout="this.className='reproductor';" class="reproductor">
-                           <source src="musica/nicole.mp3" >
-                       </audio>
+                   <div onmouseover="this.className='nicole2';" onmouseout="this.className='nicole';" onclick="reproductor('musica/nicole.mp3');" class="nicole">
+
                    </div>
 
                     <p class="texto">Nicole Denise Cucco (Rosario, Santa Fe; 25 de agosto de 2000), conocida artísticamente como Nicki Nicole, es una cantante y compositora argentina.</p>
                 </div>
                 <div class="imagen">
-                   <div onmouseover="this.className='trueno2';" onmouseout="this.className='trueno';" class="trueno">
-                       <audio controls autoplay onmouseover="this.className='reproductor2';" onmouseout="this.className='reproductor';" class="reproductor">
-                           <source src="musica/trueno.mp3" >
-                       </audio>
+                   <div onmouseover="this.className='trueno2';" onmouseout="this.className='trueno';" onclick="reproductor('musica/trueno.mp3');" class="trueno">
+
                    </div>
 
                     <p class="texto">Mateo Palacios Corazzina (La Boca, Buenos Aires; 25 de marzo de 2002), más conocido por su nombre artístico Trueno, es un rapero, cantante y freestyler argentino.</p>
                 </div>
                 <div class="imagen">
-                   <div onmouseover="this.className='duki2';" onmouseout="this.className='duki';" class="duki">
-                       <audio controls autoplay onmouseover="this.className='reproductor2';" onmouseout="this.className='reproductor';" class="reproductor">
-                           <source src="musica/duki.mp3" >
-                       </audio>
+                   <div onmouseover="this.className='duki2';" onmouseout="this.className='duki';" onclick="reproductor('musica/duki.mp3');" class="duki">
+
                    </div>
 
                     <p class="texto">Mauro Ezequiel Lombardo (Almagro, Buenos Aires, 24 de junio de 1996), conocido artísticamente como Duki, es un rapero y compositor argentino</p>
                 </div>
                 <div class="imagen">
-                   <div onmouseover="this.className='bizarrap2';" onmouseout="this.className='bizarrap';" class="bizarrap">
-                       <audio controls autoplay onmouseover="this.className='reproductor2';" onmouseout="this.className='reproductor';" class="reproductor">
-                           <source src="musica/bizarrap.mp3" >
-                       </audio>
+                   <div onmouseover="this.className='bizarrap2';" onmouseout="this.className='bizarrap';" onclick="reproductor('musica/bizarrap.mp3');" class="bizarrap">
+
                    </div>
 
                     <p class="texto">Gonzalo Julián Conde (Ramos Mejía, área metropolitana de Buenos Aires; 29 de agosto de 1998), conocido artísticamente como Bizarrap (abreviado Biza), es un productor musical argentino</p>
@@ -183,46 +164,36 @@
             <h1 class="tipo_musica">Pop</h1>
             <div class="reggaeton">
                     <div class="imagen">
-                       <div onmouseover="this.className='aitana2';" onmouseout="this.className='aitana';" class="aitana">
-                           <audio controls autoplay onmouseover="this.className='reproductor2';" onmouseout="this.className='reproductor';" class="reproductor">
-                               <source src="musica/aitana.mp3" >
-                           </audio>
+                       <div onmouseover="this.className='aitana2';" onmouseout="this.className='aitana';" onclick="reproductor('musica/aitana.mp3');" class="aitana">
+
                        </div>
 
                         <p class="texto">Aitana Ocaña Morales (Barcelona, 27 de junio de 1999), más conocido como Aitana, es una cantante y actriz española. </p>
                     </div>
                     <div class="imagen">
-                       <div onmouseover="this.className='orozco2';" onmouseout="this.className='orozco';" class="orozco">
-                           <audio controls autoplay onmouseover="this.className='reproductor2';" onmouseout="this.className='reproductor';" class="reproductor">
-                               <source src="musica/orozco.mp3" >
-                           </audio>
+                       <div onmouseover="this.className='orozco2';" onmouseout="this.className='orozco';" onclick="reproductor('musica/orozco.mp3');" class="orozco">
+
                        </div>
 
                         <p class="texto">Antonio José Orozco Ferrón, conocido simplemente como Antonio Orozco (Hospitalet de Llobregat, Cataluña; 23 de noviembre de 1972) es un cantante y compositor español.</p>
                     </div>
                     <div class="imagen">
-                       <div onmouseover="this.className='melendi2';" onmouseout="this.className='melendi';" class="melendi">
-                           <audio controls autoplay onmouseover="this.className='reproductor2';" onmouseout="this.className='reproductor';" class="reproductor">
-                               <source src="musica/melendi.mp3" >
-                           </audio>
+                       <div onmouseover="this.className='melendi2';" onmouseout="this.className='melendi';" onclick="reproductor('musica/melendi.mp3');" class="melendi">
+
                        </div>
 
                         <p class="texto">Ramón Melendi Espina (Oviedo, 21 de enero de 1979), conocido artísticamente como Melendi, es un cantautor y compositor español de música pop y rumba.​</p>
                     </div>
                     <div class="imagen">
-                       <div onmouseover="this.className='pablo2';" onmouseout="this.className='pablo';" class="pablo">
-                           <audio controls autoplay onmouseover="this.className='reproductor2';" onmouseout="this.className='reproductor';" class="reproductor">
-                               <source src="musica/pablo.mp3" >
-                           </audio>
+                       <div onmouseover="this.className='pablo2';" onmouseout="this.className='pablo';" onclick="reproductor('musica/pablo.mp3');" class="pablo">
+
                        </div>
 
                         <p class="texto">Pablo Moreno de Alborán Ferrándiznota (Málaga, 31 de mayo de 1989)​, conocido artísticamente como Pablo Alborán, es un cantautor y músico español</p>
                     </div>
                     <div class="imagen">
-                       <div onmouseover="this.className='beret2';" onmouseout="this.className='beret';" class="beret">
-                           <audio controls autoplay onmouseover="this.className='reproductor2';" onmouseout="this.className='reproductor';" class="reproductor">
-                               <source src="musica/beret.mp3" >
-                           </audio>
+                       <div onmouseover="this.className='beret2';" onmouseout="this.className='beret';" onclick="reproductor('musica/beret.mp3');" class="beret">
+
                        </div>
 
                         <p class="texto">Francisco Javier Álvarez Beret, (Sevilla; 2 de julio de 1996), conocido simplemente como Beret, es un cantante español de genero urbano y pop.</p>
