--- a/entrega2.html
+++ b/entrega2.html
@@ -7,7 +7,9 @@
 <script src="javascript/javascript.js"></script>
 </head>
 <body onload="contador()">
+<!-- Cuando se ejecute el body lanzaremos la función que activa el contador de los nuevos lanzamientos -->
     <div class="columna_izquierda">
+        <!-- Columna izquierda que estara formada por encabezado y cuerpo-->
         <div class="encabezado_izquierda">
             <img src="images/spotify_icon.png" alt="icon" class="imagen3">
             <div class="titulo">
@@ -69,6 +71,7 @@
     <div class="columna_derecha">
 
         <div class="encabezado_derecha">
+            <!-- Cada uno de estos botones te llevaran a la pagina de inicio de sesion y registrarse-->
             <div class="botones">
                 <a href="login.html" class="boton_1" id="signup">LOG IN</a>
                 <a href="registrarse.html" class="boton_2">SIGN UP</a>
@@ -228,6 +231,7 @@
             </div>
 
             <h1 class="tipo_musica">Últimos lanzamientos</h1>
+            <!-- en este ultimo div tendremos los contadores de las ultimas canciones-->
             <div class="reggaeton">
                     <div class="imagen" >
                        <div onmouseover="this.className='aitana2';" onmouseout="this.className='aitana';" class="aitana">
