--- a/perfil.html
+++ b/perfil.html
@@ -107,7 +107,7 @@
             <h1 class="tipo_musica">Canciones mas escuchadas</h1>
             <div class="reggaeton">
                 <div class="imagen">
-                    <div  onclick="abrirperfilartista('Nicky Jam','nickyjam.png');" class="sech">
+                    <div  onclick="pincharcancion('Sech','images/sech.jpg','musica/sech.mp3');" class="sech">
                     </div>
                 </div>
                 <div class="imagen">
@@ -144,7 +144,7 @@
            <h1 class="tipo_musica">Usuarios seguidos</h1>
             <div class="reggaeton">
                  <div class="imagen">
-                    <div onclick="abrirperfilusuario('nickyjam');" >
+                    <div onclick="abrirperfilusuario('nickyjam');" onmouseover="this.className='aitana2';" onmouseout="this.className='aitana';" class="aitana" >
 
                     </div>
 
