--- a/perfil.html
+++ b/perfil.html
@@ -111,19 +111,19 @@
                     </div>
                 </div>
                 <div class="imagen">
-                    <div  onclick="abrirperfilartista('nickyjam');" class="badbunny">
+                    <div  onclick="pincharcancion('Bad Bunny','images/badbunny.jpg','musica/badbunny.mp3');" class="badbunny">
                     </div>
                 </div>
                 <div class="imagen">
-                    <div  onclick="abrirperfilartista('nickyjam');" class="ozuna">
+                    <div  onclick="pincharcancion('Ozuna','images/ozuna.jpg','musica/ozuna.mp3');" class="ozuna">
                     </div>
                 </div>
                 <div class="imagen">
-                        <div  onclick="abrirperfilartista('nickyjam');" class="balvin">
+                        <div  onclick="pincharcancion('J Balvin','images/balvin.jpg','musica/balvin.mp3');" class="balvin">
                         </div>
                 </div>
                  <div class="imagen">
-                    <div  onclick="abrirperfilartista('Nicky Jam','nickyjam.png');" class="nickyjam">
+                    <div  onclick="pincharcancion('Nicky Jam','images/nickyjam.jpg','musica/nickyjam.mp3');" class="nickyjam">
                     </div>
                 </div>
             
