--- a/perfil_usuario.html
+++ b/perfil_usuario.html
@@ -4,7 +4,7 @@
 <title>Musica</title>
 <link rel="stylesheet" href="style/entrega1.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<script src="javascript/javascript.js"></script>
+<script src="script/javascript.js"></script>
 </head>
 <body onload="perfil_usuario()">
     <div class="columna_izquierda">
