--- a/registrarse.html
+++ b/registrarse.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="style/entrega1.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <script src="javascript/javascript.js"></script>
+    <script src="script/javascript.js"></script>
 </head>
 <body>
     <div class="columna_izquierda">
