--- a/login.html
+++ b/login.html
@@ -4,6 +4,7 @@
 <title>Musica</title>
 <link rel="stylesheet" href="style/entrega1.css">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 <script src="script/javascript.js"></script>
 </head>
 <body>
